--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,36 +1,38 @@
 *{
-    box-sizing: border-box;
-  }
+    ox-sizing: border-box;
+}
 
 body {
-    font-size: 16px;
-    background-color: #282c33;
-    font-family: 'Fira Code', monospace;
-    color: #ABB2BF;
+  font-size: 16px;
+  background-color: #282c33;
+  font-family: 'Fira Code', monospace;
+  color: #ABB2BF;
 }
+
 h1, h2, h3, h4, h5, h6 {
-    margin: 0px;
+  margin: 0px;
 }
+
 a {
-    color:#FFF;
-    text-decoration: none;
+  color:#FFF;
+  text-decoration: none;
 }
 
 header {
-    padding: 0.5rem 2rem;
+  padding: 0.5rem 2rem;
 }
 
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 
 #logo{
-    padding: 0px;
-    text-decoration: none;
-    color:floralwhite;
+  padding: 0px;
+  text-decoration: none;
+  color:floralwhite;
 }
 
 nav li {
@@ -38,58 +40,59 @@ nav li {
 }
 
 nav li a {
-    text-decoration: none;
-    margin-right: 1rem;
-    color: white;
+  text-decoration: none;
+  margin-right: 1rem;
+  color: white;
 }
 
 main {
-    margin-top: 2rem;
-    padding: 5px 2rem;
+  margin-top: 2rem;
+  padding: 5px 2rem;
 }
 
 main #intro{
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    gap: 4rem;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  gap: 4rem;
 }
 
 .box{
-    width: 40%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
     
 }
 
 .box img{
-    width:25rem;
-    height: auto;
-    align-self: center;
-    background-image:url(../images/Logo.png);
-    background-repeat: no-repeat;
+  width:25rem;
+  height: auto;
+  align-self: center;
+  background-image:url(../images/Logo.png);
+  background-repeat: no-repeat;
     
 }
 
 @media only screen and (max-width: 845px){
     main #intro{
-        display: flex;
-        justify-content:space-between;
-        flex-direction: column;
-        align-items:center
+      display: flex;
+      justify-content:space-between;
+      flex-direction: column;
+      align-items:center;
+      padding: 20px 3rem;
     }
 
     .box{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     .box img{
-        width: 20rem;
-        height: auto;
+      width: 20rem;
+      height: auto;
     
     }
 
@@ -97,32 +100,302 @@ main #intro{
 }
 
 #intro h2{
-    color: var(--white, #FFF);
+  color: var(--white, #FFF);
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 600;
+    
     
 }
 
 #intro mark{
-    background-color: transparent;
-    color: #C778DD;
+  background-color: transparent;
+  color: #C778DD;
 }
 
 aside{
-    color: white;
-    padding: 0.5rem 0rem;
-    display: inline-flex;
-    width: 150px;
+  color: white;
+  padding: 0.5rem 0rem;
+  display: inline-flex;
+  width: 150px;
 }
 
 
 
 .linebox{
-    padding: 0.5rem 1rem;
-    border: 1px solid  #C778DD;
-    margin:0px;
+  padding: 0.5rem 1rem;
+  border: 1px solid  #C778DD;
+  margin:0px;
 }
 
 .pf{
-    width: 22rem;
-    text-align: center;
-    align-self: center;
+  width: 22rem;
+  text-align: center;
+  align-self: center;
 }
+
+#project {
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  gap: 4rem;
+}
+
+
+/* 
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #000;
+  padding-bottom: 100px;
+}
+
+#contact {
+  width: 100%;
+  height: 100%;
+}
+
+.section-header {
+  text-align: center;
+  margin: 0 auto;
+  padding: 40px 0;
+  font: 300 60px 'Oswald', sans-serif;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 6px;
+}
+
+.contact-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 20px;
+  position: relative;
+  max-width: 840px;
+}
+
+/* Left contact page /
+.form-horizontal {
+    /*float: left;/
+    max-width: 400px;
+    font-family: 'Lato';
+    font-weight: 400;
+  }
+  
+  .form-control, 
+  textarea {
+    max-width: 400px;
+    background-color: #000;
+    color: #fff;
+    letter-spacing: 1px;
+  }
+  
+  .send-button {
+    margin-top: 15px;
+    height: 34px;
+    width: 400px;
+    overflow: hidden;
+    transition: all .2s ease-in-out;
+  }
+  
+  .alt-send-button {
+    width: 400px;
+    height: 34px;
+    transition: all .2s ease-in-out;
+  }
+  
+  .send-text {
+    display: block;
+    margin-top: 10px;
+    font: 700 12px 'Lato', sans-serif;
+    letter-spacing: 2px;
+  }
+  
+  .alt-send-button:hover {
+    transform: translate3d(0px, -29px, 0px);
+  }
+  
+  /* Begin Right Contact Page /
+  .direct-contact-container {
+    max-width: 400px;
+  }
+  
+  /* Location, Phone, Email Section /
+  .contact-list {
+    list-style-type: none;
+    margin-left: -30px;
+    padding-right: 20px;
+  }
+  
+  .list-item {
+    line-height: 4;
+    color: #aaa;
+  }
+  
+  .contact-text {
+    font: 300 18px 'Lato', sans-serif;
+    letter-spacing: 1.9px;
+    color: #bbb;
+  }
+  
+  .place {
+    margin-left: 62px;
+  }
+  
+  .phone {
+    margin-left: 56px;
+  }
+  
+  .gmail {
+    margin-left: 53px;
+  }
+  
+  .contact-text a {
+    color: #bbb;
+    text-decoration: none;
+    transition-duration: 0.2s;
+  }
+  
+  .contact-text a:hover {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  
+  /* Social Media Icons /
+  .social-media-list {
+    position: relative;
+    font-size: 22px;
+    text-align: center;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+  }
+  
+  .social-media-list li a {
+    color: #fff;
+  }
+  
+  .social-media-list li {
+    position: relative; 
+    display: inline-block;
+    height: 60px;
+    width: 60px;
+    margin: 10px 3px;
+    line-height: 60px;
+    border-radius: 50%;
+    color: #fff;
+    background-color: rgb(27,27,27);
+    cursor: pointer; 
+    transition: all .2s ease-in-out;
+  }
+  
+  .social-media-list li:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+    border-radius: 50%;
+    opacity: 0;
+    box-shadow: 0 0 0 1px #fff;
+    transition: all .2s ease-in-out;
+  }
+  
+  .social-media-list li:hover {
+    background-color: #fff; 
+  }
+  
+  .social-media-list li:hover:after {
+    opacity: 1;  
+    transform: scale(1.12);
+    transition-timing-function: cubic-bezier(0.37,0.74,0.15,1.65);
+  }
+  
+  .social-media-list li:hover a {
+    color: #000;
+  }
+  
+  .copyright {
+    font: 200 14px 'Oswald', sans-serif;
+    color: #555;
+    letter-spacing: 1px;
+    text-align: center;
+  }
+  
+  hr {
+    border-color: rgba(255,255,255,.6);
+  }
+  
+  /* Begin Media Queries/
+  @media screen and (max-width: 850px) {
+    .contact-wrapper {
+      display: flex;
+      flex-direction: column;
+    }
+    .direct-contact-container, .form-horizontal {
+      margin: 0 auto;
+    }  
+    
+    .direct-contact-container {
+      margin-top: 60px;
+      max-width: 300px;
+    }    
+    .social-media-list li {
+      height: 60px;
+      width: 60px;
+      line-height: 60px;
+    }
+    .social-media-list li:after {
+      width: 60px;
+      height: 60px;
+      line-height: 60px;
+    }
+  }
+  
+  @media screen and (max-width: 569px) {
+  
+    .direct-contact-container, .form-wrapper {
+      float: none;
+      margin: 0 auto;
+    }  
+    .form-control, textarea {
+      
+      margin: 0 auto;
+    }
+   
+    
+    .name, .email, textarea {
+      width: 280px;
+    } 
+    
+    .direct-contact-container {
+      margin-top: 60px;
+      max-width: 280px;
+    }  
+    .social-media-list {
+      left: 0;
+    }
+    .social-media-list li {
+      height: 55px;
+      width: 55px;
+      line-height: 55px;
+      font-size: 2rem;
+    }
+    .social-media-list li:after {
+      width: 55px;
+      height: 55px;
+      line-height: 55px;
+    }
+    
+  }
+  
+  @media screen and (max-width: 410px) {
+    .send-button {
+      width: 99%;
+    }
+  }
+*/
