--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,7 @@ body {
   background-color: #282c33;
   font-family: 'Fira Code', monospace;
   color: #ABB2BF;
+  margin: 0px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -48,14 +49,18 @@ nav li a {
 
 main {
   margin-top: 2rem;
-  padding: 5px 1rem;
+  padding: 1rem 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
 }
 
 main #intro{
   display: flex;
   justify-content:center;
   align-items: center;
-  gap: 4rem;
+  gap: 8rem;
+  padding: 0rem;
 }
 
 .box{
@@ -88,7 +93,7 @@ main #intro{
     justify-content:center;
     flex-direction: column;
     align-items:center;
-    padding: 20px 3rem;
+    gap: 2rem;
   }
 
   h2{
@@ -150,7 +155,7 @@ aside{
   margin:0px;
 }
 
-.pf{
+.aligned{
   width: 22rem;
   text-align: center;
   align-self: center;
@@ -161,7 +166,6 @@ main #quote{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 4rem 2rem;
   font-size: 1.5rem;
   color: #FFF;
 }
@@ -180,7 +184,7 @@ main #quote{
 .quot .img{
   display: flex;
   align-self: flex-start;
-  z-index: 12;
+  z-index: 1;
   margin-top: -2rem;
   background: #282C33;
   border: 8px solid #282C33;
@@ -205,7 +209,7 @@ main #quote{
 .quot2 .img2{
   display: flex;
   align-self: flex-start;
-  z-index: 12;
+  z-index: 1;
   margin-top: -1rem;
   margin-right: -1rem;
   background: #282C33;
@@ -237,7 +241,6 @@ main #project{
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding: 0rem 7rem;
 }
 
 .subtitle{
@@ -267,7 +270,7 @@ main #project{
   align-items: center;
   gap: 1rem;
   margin-top: 1.5rem;
-  padding: 0px 0.5rem;
+  padding: 0rem 1rem;
 }
 
 .smallbox{
@@ -292,11 +295,11 @@ main #project{
     align-items: center;
     gap: 3rem;
     margin-top: 1.5rem;
-    padding: 0px 0.5rem;
+    padding: 0rem 0.5rem;
   }
 
   .smallbox{
-    width:100% !important;
+    width:100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -340,19 +343,24 @@ h3{
   padding: 1rem;
 }
 
+.view aside:hover{
+  color: #bbb;
+}
+
 .view aside{
   border: 1px solid #C778DD;
   padding: 0.5rem 1rem; 
   align-items: flex-start;
   width: 7rem;
   margin: 0.5rem 0;
+  cursor: pointer;
 }
 
 main #skill {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding: 5rem 7rem;
+
 }
 
 #icon{
@@ -365,7 +373,7 @@ main #skill {
 }
 
 .smallicon{
-  width:10%;
+  width:8%;
 }
 
 @media only screen and (max-width: 1300px){
@@ -379,7 +387,7 @@ main #skill {
   }
 
   .smallicon{
-    width: 8%;
+    width: 5%;
   }
 }
 
@@ -393,6 +401,7 @@ main #skill {
 .smalldescript{
   display: flex;
   flex-direction: column;
+  align-self: flex-start;
   width: 100%;
 }
 
@@ -400,12 +409,190 @@ main #aboutme {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding: 5rem 7rem;
+}
+
+#aboutme .bigbox1{
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  align-self: flex-start;
+  gap: 1rem;
+  padding: 1rem 2rem;
+}
+
+.imgme{
+  margin-top: -5rem;
+  width: 70%;
+  height: 30rem;
+  align-self: center;
+  background: url(../images/hod.svg) no-repeat center;
+  border-bottom: #C778DD 1px solid;
+}
+
+@media screen and (max-width: 1300px) {
+  .imgme{
+    margin-top: -4rem;
+    width: 50%;
+    background: url(../images/hod.svg) no-repeat center;
+    height: 30rem;
+    align-self: center;
+    border-bottom: #C778DD 1px solid;
+  }
 }
 
 main #contact {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding: 5rem 7rem;
 }
+#contact .bigbox2{
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  align-self: flex-start;
+  gap: 3rem;
+  padding: 1.5rem 2rem;
+}
+
+#contact .smalldescript1{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-self: flex-start;
+  width: 60%;
+}
+
+#contact .smallbox{
+  align-items:flex-start;
+  justify-content:flex-start;
+  width: 25rem;
+}
+
+/**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
+
+
+/* The Modal (background) */
+#vimage1 {
+  display: none; /* Hidden by default */
+}
+
+#vimage2 {
+  display: none; /* Hidden by default */
+}
+
+#vimage3 {
+  display: none; /* Hidden by default */
+}
+
+.posDisplay{
+  position: fixed; /* Stay in place */
+  z-index: 5; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+/* Caption of Modal Image */
+#caption1 {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+/* Add Animation */
+.modal-content, #caption {  
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+  from {transform: scale(0.1)} 
+  to {transform: scale(1)}
+}
+
+/* The Close Button */
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+  .modal-content {
+    width: 100%;
+  }
+}
+
+footer{
+  border-top: 1px solid #ABB2BF;
+  margin-top: 6rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1rem 3rem;
+  gap: 2rem;
+}
+
+footer .bigbox3{
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  gap: 5rem;
+  padding: 1.5rem 3rem;
+}
+
+footer .smalldescript1{
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+}
+
+footer  .smallbox{
+  padding: 0px;
+  margin: 0rem;
+  align-items:flex-start;
+  width: 25rem;
+}
+
+footer .logo2{
+  color: #FFF;
+  font-weight: 600;
+}
+
+footer .white{
+  color: #FFF;
+  font-size: 1.5rem;
+  line-height: normal;
+  margin: 0.5rem 0rem;
+}
+
