--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -265,7 +265,8 @@ main #project{
 }
 
 .bigbox {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   justify-content:center;
   align-items: center;
   gap: 1rem;
@@ -275,9 +276,10 @@ main #project{
 
 .smallbox{
   width:100%;
+  height: 27rem;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 .smallbox img{
@@ -289,7 +291,7 @@ main #project{
 
 @media only screen and (max-width: 1300px){
   .bigbox {
-    display: flex;
+    display:flex;
     justify-content:center;
     flex-direction: column;
     align-items: center;
@@ -299,19 +301,21 @@ main #project{
   }
 
   .smallbox{
-    width:100%;
+    width:80%;
+    height: 80%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
   }
 
   .smallbox img{
     width: 100%;
-    height: 30rem;
+    height: 100%;
     align-self: center;
     background-repeat: no-repeat;
   }
 }
+
 
 .lineround{
   border: 1px solid  #C778DD;
@@ -485,6 +489,10 @@ main #contact {
 }
 
 #vimage4 {
+  display: none; /* Hidden by default */
+}
+
+#vimage5 {
   display: none; /* Hidden by default */
 }
 
