`Added new project "BetZillion" and updated modal images and captions`

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -496,6 +496,10 @@ main #contact {
   display: none; /* Hidden by default */
 }
 
+#vimage6 {
+  display: none; /* Hidden by default */
+}
+
 .posDisplay{
   position: fixed; /* Stay in place */
   z-index: 5; /* Sit on top */
